[gd_scene load_steps=5 format=3 uid="uid://bt80o0nqyotka"]

[ext_resource type="Script" path="res://player/Player.gd" id="1_0cohp"]
[ext_resource type="PackedScene" uid="uid://wh6yvkwenk0p" path="res://animated-characters/Clara/Clara.tscn" id="2_3dql6"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_r0f6p"]

[sub_resource type="BoxShape3D" id="BoxShape3D_fqogg"]
size = Vector3(1, 1.75399, 0.435577)

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_0cohp")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.90258, 0)
shape = SubResource("CapsuleShape3D_r0f6p")

[node name="Clara" parent="." instance=ExtResource("2_3dql6")]

[node name="FloorRayCast" type="RayCast3D" parent="."]

[node name="InteractArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.924976, 0.292979)
shape = SubResource("BoxShape3D_fqogg")

[connection signal="OnCharacterDying" from="Clara" to="." method="_on_clara_on_character_dying"]
[connection signal="body_entered" from="InteractArea" to="." method="_on_interact_area_body_entered"]
[connection signal="body_exited" from="InteractArea" to="." method="_on_interact_area_body_exited"]
